--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
   <div v-if="sheets_processats">
     Sheets processed: {{sheets_processats}}
+    &mdash;
+    Peak Label = {{peak_label}}
   </div>
 
   <div v-if="sheets">
