--- a/index.html
+++ b/index.html
@@ -31,11 +31,17 @@
       font-family:monospace;
     }
   </style>
-</head>
+</head><body>
 
-<body>
+<div>
+  <b>TODO (pàgina en construcció)</b>
+  <ul>
+    <li>incorporar càlcul recovery</li>
+    <li>incorporar info standards</li>
+  </ul>
+</div><hr>
 
-<b>Processar arxius Orbitrap (pàgina en construcció)</b>
+<B>PROCESSAR ARXIUS ORBITRAP</B>
 
 <div id=app>
   <!--boto carregar excel-->
