--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!doctype html><html>
-<head>
+<!doctype html><html><head>
   <meta charset=utf8>
   <title>orbitrap</title>
   <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
