--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       animation-duration: 2s;
       animation-iteration-count: infinite;
     }
+    hr{
+      border:none;
+      border-top:1px solid #ccc;
+    }
     [center]{
       text-align:center;
     }
