--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
               <tr>
                 <td>filename</td>
                 <td>area</td>
+                <td>area-blank</td>
                 <td>ppb calculat</td>
                 <td>
                   ppb calculat<br>
@@ -198,6 +199,9 @@
                   </td>
                   <td number>
                     {{row.area}}
+                  </td>
+                  <td number>
+                    wip
                   </td>
                   <td number>
                     {{ppb_calc}}
