--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html><html><head>
   <meta charset=utf8>
   <title>orbitrap</title>
+
+  <!--llibreries TODO-->
   <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/exceljs/4.4.0/exceljs.min.js"
@@ -8,6 +10,7 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   ></script>
+
   <style>
     @keyframes animacio{
       from{
